# static-site-generator

./: .clang-format  .gitignore  CMakeLists.txt
include/ssg/: Div.h  Element.h
src/: Div.cpp
tests/: main.cpp
